--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,3 +1,10 @@
 [class^=window] {
     position: absolute;
 }
+
+body {
+    height: 100vh;
+    background-image: url("/wallpaper.jpg");
+    background-size: cover;
+    margin: 0;
+}
